--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
             <div class="tab" onclick="fun(event, 'CWPPcont')">CWPP</div>
         </div>
         <div id="CSPMcont" class="tabcontent" >
-            <input type="checkbox" id="option1" name="option1" value="Cloud Account Risk Assessment" checked>
+            <input type="checkbox" id="option1" name="option1" value="Cloud Account Risk Assessment" class="Cloud Account Risk Assessment" checked>
             <label for="option1">Cloud Account Risk Assessment</label>
             <br>
-            <input type="checkbox" id="option2" name="option2" value="Cloud Accounts" checked>
+            <input type="checkbox" id="option2" name="option2" value="Cloud Accounts" class="Cloud Accounts" checked>
             <label for="option2">Cloud Accounts</label>
         </div>
         <div id="CWPPcont" class="tabcontent">
-            <input type="checkbox" id="ption1" name="ption1" value="Cloud Account Risk Assessment" checked>
+            <input type="checkbox" id="ption1" name="ption1" value="Workload Alerts" class="Workload Alerts" checked>
             <label for="ption1">Workload Alerts</label>
             <br>
-            <input type="checkbox" id="ption2" name="ption2" value="Cloud Accounts" checked>
+            <input type="checkbox" id="ption2" name="ption2" value="Top 5 Namespace Specific Alerts" class="Top 5 Namespace Specific Alerts" checked>
             <label for="ption2">Top 5 Namespace Specific Alerts</label>
         </div>
         <button id="checkbutton" onclick="rendercards(event)">Confirm</button>
